bugfix: align-items center for chatroom-title

--- a/app/assets/stylesheets/channels.scss
+++ b/app/assets/stylesheets/channels.scss
@@ -13,8 +13,8 @@
 .chatroom-title{
   padding-left: 16px;
   padding-right: 12px;
-  min-height: 50px;
-  max-height: 50px;
+  min-height: 48px;
+  max-height: 48px;
   width: 100%;
   border-bottom: 1px solid black;
   box-sizing: border-box;
@@ -22,6 +22,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   div{
     display: flex;
     align-items: center;
