--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -9,8 +9,8 @@
 
 .messages-header{
   width: 100%;
-  min-height: 50px;
-  max-height: 50px;
+  min-height: 48px;
+  max-height: 48px;
   background-color: #36393e;
   padding-left: 12px;
   padding-right: 8px;
